feedly.css
/* ... */
#main #content-wrap .dijitComboButton .dijitArrowButton {
	border-left: none;
}
#main #content-wrap .dijitComboButton .dijitButtonText {
	padding: 0;
}
#main #content-wrap .dijitDropDownButton .dijitArrowButtonInner {
	height: 14px;
}
#main_toolbar_form > * {
	margin: 0 -3px 0 5px;
}

#overlay {
	position: absolute;
	top: 0;
	left: 0;
	z-index: 100;
	width: 100%;
	height: 100%;
	background: #fff;
	text-align: center;
}
#overlay:before {
	height: 90%;
	content: "";
}
#overlay:before,
#overlay_inner {
	display: inline-block;
	vertical-align: middle;
}
#overlay_inner .insensitive {
	margin: 0 0 20px;
}
#overlay_inner .dijitProgressBar {
	margin: -10px 0;
	border: 1px solid #d8d8d8;
}
#overlay_inner .dijitProgressBarFull {
	border: 0;
}
#overlay_inner .dijitProgressBarTile {
	background: #e5e5e5;
}
#overlay_inner .dijitProgressBarLabel {
	color: #444;
	font-weight: bold;
}
.labelColorIndicator,
.labelColorIndicator2,
.hlLabelRef {
	display: inline-block;
	border-radius: 99px;
	background-color: #fec;
	color: #444;
	font-weight: bold;
}
.labelColorIndicator,
.labelColorIndicator2 {
	width: 13px;
	height: 13px;
	border: 1px solid rgba(0,0,0,.1);
	text-align: center;
	font-size: 10px;
	line-height: 1;
}
.hlLabelRef {
	margin-left: 5px;
	padding: 0 4px;
	border: 1px solid rgba(0,0,0,.067);
	font-size: 9px;
	line-height: 1;
}
.author:empty + span .hlLabelRef:first-child {
	margin-left: 0;
}

/* feed tree */
#ttrssMain #main_toolbar_form > .dijitButton {
	display: block !important;
}
#ttrssMain #main_toolbar_form > .dijitButton .dijitButtonNode {
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	padding: 0;
	width: 30px;
	border: 0;
	border-radius: 0;
	background: transparent;
	box-shadow: none;
	transition: background .5s;
}
#ttrssMain #main_toolbar_form > .dijitButton .dijitButtonContents {
	position: absolute;
	top: 83px;
	left: 7px;
	overflow: hidden;
	padding: 0;
	width: 16px;
	height: 16px;
	background: transparent url("feedly/icons.png") 0 -16px no-repeat;
	background-size: 176px 32px;
	text-indent: 101%;
	opacity: .2;
	transition: opacity .2s;
}
#ttrssMain #main_toolbar_form > .dijitButton:hover .dijitButtonNode {
	background: rgba(0,0,0,.05);
}
#ttrssMain #main_toolbar_form > .dijitButton:hover .dijitButtonContents {
	opacity: .7;
}
#feeds-holder #feedTree {
	padding: 0 9px 30px 0;
}

/* don't react on clicks between rows */
#feeds-holder #feedTree:after {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	content: "";
}
#feeds-holder .dijitTreeNode .dijitTreeNode .dijitTreeRow,
#feeds-holder .dijitTreeNode .dijitTreeNode .dijitTreeRow * {
	position: relative;
	z-index: 1;
	cursor: pointer;
}

#feeds-holder .dijitTreeRow {
	overflow: hidden;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	padding: 4px 6px;
	max-width: 100%;
	border: 0;
	background: transparent;
	color: #909090;
	text-overflow: ellipsis;
	transition: color .2s;
}
#feeds-holder .dijitTreeRowSelected {
	color: #222;
	transition: none;
}
#feeds-holder .dijitTreeLabel.Unread {
	font-weight: bold;
}
#feeds-holder .dijitTreeRow.Error,
#errorButton {
	color: #e44;
}
#feeds-holder .dijitInline[style*="19px"] {
	padding-right: 6px;
}
#feeds-holder .dijitInline[style*="38px"] {
	padding-right: 12px;
}
#feeds-holder .dijitInline[style*="57px"] {
	padding-right: 18px;
}
#feeds-holder .counterNode {
	float: right;
	padding: 2px 2px 0;
	font-size: 10px;
}
#feeds-holder .dijitTreeRow .counterNode.aux {
	color: #b2b2b2;
}
#feeds-holder img.feedIcon,
#feeds-holder .labelColorIndicator {
	position: relative;
	top: -1px;
	margin: 0 4px 0 0;
	vertical-align: middle;
}
#feeds-holder .dijitTreeRow .dijitTreeExpando {
	margin: 0 4px 0 0;
	background-image: url("feedly/icons.png");
	background-size: 176px 32px;
	opacity: .2;
}
#feeds-holder .dijitTreeRow .dijitTreeExpando:hover {
	opacity: .35;
}
#feeds-holder .dijitTreeExpandoClosed {
	background-position: 0 0;
}
#feeds-holder .dijitTreeExpandoOpened {
	background-position: -16px 0;
}
#feeds-holder #feedTree .loadingNode, /* needs #feedTree to raise specifity for opacity */
#feeds-holder .dijitTreeExpandoLeaf[src*=indicator] ~ .dijitTreeContent:after {
	margin-left: 5px;
	width: 16px;
	height: 11px;
	opacity: 1;
}
#feeds-holder .dijitTreeExpandoLeaf[src*=indicator] ~ .dijitTreeContent:after {
	display: inline-block;
	margin-left: 2px; /* compensate added white-space */
	background: transparent url("../images/indicator_tiny.gif") 0 0 no-repeat;
	content: "";
	vertical-align: middle;
}
#feeds-holder .dijitTreeRow.Hidden,
#feeds-holder .dijitFolderClosed,
#feeds-holder .dijitFolderOpened,
#feeds-holder .dijitTreeExpandoLeaf,
#feeds-holder[style*=none] ~ .dijitSplitter { /* hide splitter when sidebar is collapsed */
	display: none;
}

#feeds-holder #feedTree > .dijitTreeNode > .dijitTreeContainer > .dijitTreeNode:first-child > .dijitTreeRow {
	margin: 0 0 7px;
	padding: 13px 6px;
	border-bottom: 1px solid #d4d4d4;
}
#feeds-holder #feedTree > .dijitTreeNode > .dijitTreeContainer > .dijitTreeNode:first-child {
	margin-bottom: 26px;
}
#feeds-holder #feedTree > .dijitTreeNode > .dijitTreeContainer > .dijitTreeNode:first-child .counterNode + .dijitInline {
	padding: 0 !important;
}
#feeds-holder #feedTree > .dijitTreeNode > .dijitTreeContainer > .dijitTreeNode:first-child .feedIcon {
	margin: 0 6px 0 -2px;
}

/* main */
#headlines-wrap-inner:after {
	position: absolute;
	top: 0;
	right: 34px;
	left: 26px;
	border-top: 1px solid #eee;
	content: "";
}
#floatingTitle .title,
.postHeader .postTitle a {
	font-weight: bold;
	font-size: 13px;
}
#feed_title {
	font-weight: bold;
	font-size: 13px;
	color: #444;
}
#feed_title a {
	color: inherit;
}
#content-insert {
	z-index: 3;
	border-top: 1px solid #eee !important;
}
#headlines-frame {
	z-index: 3;
	padding: 0 34px 0 26px;
	background: transparent;
}
#headlines-frame:before {
	display: block;
	margin: 0 -34px 0 -26px;
	border-top: 31px solid #fff;
	content: "";
}
/* ... */

